--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,8 +8,7 @@ banner:
   btn:
     text: Learn More
     style: banner-btn-orange-outline
-    url: >-
-      https://robillard-andrew-portfolio.netlify.com/behind-the-scenes/perfect-skating/
+    url: 'https://robillard-andrew-portfolio.netlify.com'
   video: 'https://player.vimeo.com/video/384437336'
 about:
   content: |-
