--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,7 +3,7 @@ reel:
   video: 'https://player.vimeo.com/video/403377683'
 banner:
   img: /images/uploads/bg-still.jpg
-  title: Accessible Video Production
+  title: Make Video Production Simple
   byline: Talk to me about remote video production during the Covid-19 crisis!
   btn:
     text: Learn More
