Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -28,7 +28,7 @@ contact:
     Covid-19 may have us socially distant, but that doesn't mean we can't still
     create interesting content!
   form:
-    email: hello@adamrobillard.ca
+    email: andrewrobillarddp@gmail.com
     fields:
       - label: Full Name
         type: text
