Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -26,7 +26,13 @@ about:
 contact:
   content: >-
     Covid-19 may have us socially distant, but that doesn't mean we can't still
-    create interesting content!
+    create interesting content! Whether through existing footage, motion
+    graphics or animation, where there is a will there's a way. \
+
+    \
+
+    If budget is an issue during these uncertain times, please don't hesitate to
+    let me know as I am happy to find a solution that works for both of us.
   form:
     email: andrewrobillarddp@gmail.com
     fields:
