Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -31,8 +31,9 @@ contact:
 
     \
 
-    If budget is an issue during these uncertain times, please don't hesitate to
-    let me know as I am happy to find a solution that works for both of us.
+    **If budget is an issue during these uncertain times,** please don't
+    hesitate to let me know as I am happy to find a solution that works for both
+    of us.
   form:
     email: andrewrobillarddp@gmail.com
     fields:
