Image optimization and added bts descriptions

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -311,6 +311,9 @@ collections:
       - label: Title
         name: title
         widget: string
+      - label: Meta Description
+        name: description
+        widget: string
       - label: Layout
         name: layout
         default: bts
