--- a/admin/config.yml
+++ b/admin/config.yml
@@ -98,12 +98,9 @@ collections:
                     name: style
                     widget: select
                     options:
-                      - label: Line Highlight
-                        value: ""
-                      - label: Orange Background Hover
-                        value: banner-btn-orange-bg
-                      - label: Orange Outline Hover
-                        value: banner-btn-orange-outline
+                      - { label: "Line Highlight", value: "" }
+                      - { label: "Orange Background Hover", value: "banner-btn-orange-bg" }
+                      - { label: "Orange Outline Hover", value: "banner-btn-orange-outline" }
                     required: false
               - label: Background Image
                 name: img
@@ -170,14 +167,10 @@ collections:
                             widget: select
                             hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
                             options:
-                              - label: Full
-                                value: 1
-                              - label: Half
-                                value: 1-2
-                              - label: Third
-                                value: 1-3
-                              - label: Quarter
-                                value: 1-4
+                              - { label: "Full", value: "1" }
+                              - { label: "Half", value: "1-2" }
+                              - { label: "Third", value: "1-3" }
+                              - { label: "Quarter", value: "1-4" }
                       - label: Long Text
                         name: textarea
                         widget: object
@@ -194,14 +187,10 @@ collections:
                             widget: select
                             hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
                             options:
-                              - label: Full
-                                value: 1
-                              - label: Half
-                                value: 1-2
-                              - label: Third
-                                value: 1-3
-                              - label: Quarter
-                                value: 1-4
+                              - { label: "Full", value: "1" }
+                              - { label: "Half", value: "1-2" }
+                              - { label: "Third", value: "1-3" }
+                              - { label: "Quarter", value: "1-4" }
                       - label: Email
                         name: email
                         widget: object
@@ -218,14 +207,10 @@ collections:
                             widget: select
                             hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
                             options:
-                              - label: Full
-                                value: 1
-                              - label: Half
-                                value: 1-2
-                              - label: Third
-                                value: 1-3
-                              - label: Quarter
-                                value: 1-4
+                              - { label: "Full", value: "1" }
+                              - { label: "Half", value: "1-2" }
+                              - { label: "Third", value: "1-3" }
+                              - { label: "Quarter", value: "1-4" }
                       - label: Telephone
                         name: tel
                         widget: object
@@ -242,14 +227,10 @@ collections:
                             widget: select
                             hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
                             options:
-                              - label: Full
-                                value: 1
-                              - label: Half
-                                value: 1-2
-                              - label: Third
-                                value: 1-3
-                              - label: Quarter
-                                value: 1-4
+                              - { label: "Full", value: "1" }
+                              - { label: "Half", value: "1-2" }
+                              - { label: "Third", value: "1-3" }
+                              - { label: "Quarter", value: "1-4" }
                       - label: Radio Buttons
                         name: radio
                         widget: object
@@ -269,14 +250,10 @@ collections:
                             widget: select
                             hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
                             options:
-                              - label: Full
-                                value: 1
-                              - label: Half
-                                value: 1-2
-                              - label: Third
-                                value: 1-3
-                              - label: Quarter
-                                value: 1-4
+                              - { label: "Full", value: "1" }
+                              - { label: "Half", value: "1-2" }
+                              - { label: "Third", value: "1-3" }
+                              - { label: "Quarter", value: "1-4" }
                       - label: Checkboxes
                         name: checkbox
                         widget: object
@@ -296,14 +273,10 @@ collections:
                             widget: select
                             hint: Width of form field at medium and large screen sizes (will always be full width at small screen sizes).
                             options:
-                              - label: Full
-                                value: 1
-                              - label: Half
-                                value: 1-2
-                              - label: Third
-                                value: 1-3
-                              - label: Quarter
-                                value: 1-4
+                              - { label: "Full", value: "1" }
+                              - { label: "Half", value: "1-2" }
+                              - { label: "Third", value: "1-3" }
+                              - { label: "Quarter", value: "1-4" }
                   - label: Submit Button Label
                     name: submit
                     widget: string
@@ -480,27 +453,19 @@ collections:
                     widget: select
                     hint: Width of form field at medium screen sizes (will always be full width at small screen sizes).
                     options:
-                      - label: Full
-                        value: 1
-                      - label: Half
-                        value: 1-2
-                      - label: Third
-                        value: 1-3
-                      - label: Quarter
-                        value: 1-4
+                      - { label: "Full", value: "1" }
+                      - { label: "Half", value: "1-2" }
+                      - { label: "Third", value: "1-3" }
+                      - { label: "Quarter", value: "1-4" }
                   - label: Responsive Large Width
                     name: lWidth
                     widget: select
                     hint: Width of form field at large screen sizes (will always be full width at small screen sizes).
                     options:
-                      - label: Full
-                        value: 1
-                      - label: Half
-                        value: 1-2
-                      - label: Third
-                        value: 1-3
-                      - label: Quarter
-                        value: 1-4
+                      - { label: "Full", value: "1" }
+                      - { label: "Half", value: "1-2" }
+                      - { label: "Third", value: "1-3" }
+                      - { label: "Quarter", value: "1-4" }
   - label: Work
     name: "work"
     folder: "_work"
