Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -7,7 +7,7 @@ banner:
   byline: ""
   btn:
     text: ""
-    style: banner-btn-orange-outline
+    style: null
     url: "#contact"
   video: https://player.vimeo.com/video/403377484
 about:
