Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -23,9 +23,10 @@ about:
   overlap: false
 contact:
   content: >-
-    Covid-19 may have us socially distant, but that doesn't mean we can't still
-    create interesting content! Whether through existing footage, motion
-    graphics or animation, where there is a will there's a way. \
+    A global pandemic doesn't mean we can't still create interesting content!
+    Whether through socially distance and safe filming practices, existing
+    footage, motion graphics, animation, etc... where there is a will there's a
+    way. \
 
     \
 
