Update General Content “site-information”

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -4,11 +4,11 @@ owner: Hugh Andrew Robillard
 jobTitle: Cinematographer
 url: https://andrewrobillard.com
 email: andrewrobillarddp@gmail.com
-tel: '+16138674912'
+tel: "+16138674912"
 postalCode: K1R 7B6
 social:
   - type: instagram
-    url: https://www.instagram.com/hurobes/
+    url: https://www.instagram.com/dphugh/
   - type: vimeo
     url: https://vimeo.com/andrewrobillard
   - type: linkedin
