Update General Content “home-content”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -12,9 +12,8 @@ banner:
   video: https://player.vimeo.com/video/403377484
 about:
   content: >-
-    I am a cinematographer, editor, and musician from Ottawa, Canada. I’ve been
-    creating videos for the past decade and am more excited than ever to be
-    doing so.
+    I am a cinematographer, editor, and musician and I’ve been creating videos
+    for the past decade and am more excited than ever to be doing so.
 
 
     I consider myself pretty easy going, and I think that making videos should be enjoyable for everyone involved. If that makes sense to you then let’s talk about your ideas!
